<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Username"> Username</string>
    <string name="Password"> Password</string>
    <string name="Login">Login </string>
    <string name="Register">Register </string>
    <string name="ntReg">Not yet registered? </string>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="RememberMe">Remember me </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ntLog">Already registered? </string>
    <string name="confPwd" > Confirm Password </string>
    <string name="Email">Email Address </string>
    <string name="Contactno">Contact number </string>
</resources>